Fix the button width on mobile view

--- a/src/components/Signup.less
+++ b/src/components/Signup.less
@@ -113,6 +113,11 @@
       bottom: 0;
       width: calc(~'100% - 100px');
       max-width: 400px;
+
+      @media (max-width: @screen-md) {
+        width: calc(~'100% - 40px');
+        max-width: 460px;
+      }
     }
 
     .form-content {
